--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+body{
+  background: rgb(224, 230, 226);
+}
+
+
 .page {
   margin: 20px;
+  background: rgb(224, 230, 226);
 }
 
 .interactions {
@@ -30,7 +36,6 @@
   white-space: nowrap;
   margin: 10px 0;
   padding: 10px;
-  background: #ffffff;
   border: 1px solid #e3e3e3;
 }
 
