--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@ body{
 
 .button-inline {
   border-width: 0;
-  background: transparent;
+  background: rgb(220, 233, 224);
   color: inherit;
   text-align: inherit;
   -webkit-font-smoothing: inherit;
